--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,9 +127,7 @@
     <ul class='item-lists'>
       <%= render partial: 'item', collection: @items %>
 
-      <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
-      <%# 商品がある場合は表示されないようにしましょう %>
-      <%# if @items.blank? %>
+      <% if @items.blank? %>
         <li class='list'>
           <%= link_to '#' do %>
           <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
@@ -147,9 +145,8 @@
           </div>
           <% end %>
         </li>
-      <%# end %>
-      <%# //商品がある場合は表示されないようにしましょう %>
-      <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
+      <% end %>
+
     </ul>
   </div>
   <%# /商品一覧 %>
