--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,26 +1,26 @@
-      <li class='list'>
-        <%= link_to item_path(item.id) do %>
-        <div class='item-img-content'>
-          <%= image_tag item.image, class: "item-img" %>
+<li class='list'>
+  <%= link_to item_path(item.id) do %>
+  <div class='item-img-content'>
+    <%= image_tag item.image, class: "item-img" %>
+    
+    <% if item.purchase.present? %>
+    <div class='sold-out' >
+      <span>Sold Out!!</span>
+    </div>
+    <% end %>
 
-          <%# 商品が売れていればsold outを表示しましょう %>
-          <%# div class='sold-out'>
-            <span>Sold Out!!</span>
-          </div>
-          <%# //商品が売れていればsold outを表示しましょう %>
-
-        </div>
-        <div class='item-info'>
-          <h3 class='item-name'>
-            <%= item.title %>
-          </h3>
-          <div class='item-price'>
-            <span><%= item.price %>円<br><%= item.shipping.name %></span>
-            <div class='star-btn'>
-              <%= image_tag "star.png", class:"star-icon" %>
-              <span class='star-count'>0</span>
-            </div>
-          </div>
-        </div>
-        <% end %>
-      </li>
+  </div>
+  <div class='item-info'>
+    <h3 class='item-name'>
+      <%= item.title %>
+    </h3>
+    <div class='item-price'>
+      <span><%= item.price %>円<br><%= item.shipping.name %></span>
+      <div class='star-btn'>
+        <%= image_tag "star.png", class:"star-icon" %>
+        <span class='star-count'>0</span>
+      </div>
+    </div>
+  </div>
+  <% end %>
+</li>
