--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,11 +8,11 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
-      <%# 商品購入機能実装後に、sold outを表示させます %>
-      <%# div class="sold-out">
+      <% if @item.purchase.present? %>
+      <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
+      <% end %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -23,8 +23,8 @@
       </span>
     </div>
 
-    <% if user_signed_in? %>
-      <% if current_user.id == @item.user_id%>
+    <% if user_signed_in? && @item.purchase.blank? %>
+      <% if current_user.id == @item.user_id %>
         <%= link_to "商品の編集", edit_item_path(params[:id]), method: :get, class: "item-red-btn" %>
         <p class="or-text">or</p>
         <%= link_to "削除", item_path, method: :delete, class:"item-destroy" %>
