--- a/app/assets/stylesheets/items/new.css
+++ b/app/assets/stylesheets/items/new.css
@@ -89,6 +89,12 @@
   margin-bottom: 15px;
 }
 
+.pre-image {
+  height: 300px;
+  width: 300px;
+  object-fit: contain;
+}
+
 /* /出品画像 */
 
 /* 商品名と商品説明 */
