--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -147,7 +147,7 @@
   text-align: center;
 }
 
-.comment-text {
+.comment_text {
   width: 100%;
   height: 100px;
   padding: 10px;
@@ -162,7 +162,7 @@
   text-align: left;
 }
 
-.comment-btn {
+.comment_btn {
   line-height: 48px;
   background-color: #3CCACE;
   border: 1px solid #3CCACE;
@@ -179,7 +179,7 @@
   justify-content: center;
 }
 
-.comment-flag-icon {
+.comment_flag_icon {
   margin: 10px 5px 0 0;
 }
 
@@ -187,7 +187,6 @@
   display: flex;
   justify-content: space-between;
   width: 50vw;
-
 }
 
 .change-item-btn {
@@ -203,4 +202,27 @@
   text-decoration: none;
   font-weight: bold;
   font-size: 23px;
+}
+
+.comments-lists{
+}
+
+.comment-user{
+  color: black;
+  font-size: 12px;
+}
+
+.comments-list{
+  list-style-type: square;
+  list-style-position: inside;
+  text-align: left;
+}
+
+.comment-text{
+  overflow-wrap: break-word;
+}
+
+.comment-time{
+  color: #C0C0C0;
+  font-size: 8px;
 }
