--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -25,7 +25,7 @@
 
     <% if user_signed_in? && @item.purchase.blank? %>
       <% if current_user.id == @item.user_id %>
-        <%= link_to "商品の編集", edit_item_path(params[:id]), method: :get, class: "item-red-btn" %>
+        <%= link_to "商品の編集", edit_item_path, class: "item-red-btn" %>
         <p class="or-text">or</p>
         <%= link_to "削除", item_path, method: :delete, class:"item-destroy" %>
       <% else %>
@@ -79,6 +79,9 @@
   <div class="comment-box">
     <% if user_signed_in? %>
       <%= form_with(model: [@item, @comment], local: true) do |f| %>
+
+      <%= render 'shared/error_messages', model: f.object %>
+
         <div>
           <%= f.text_area :text, class: :comment_text %>
         </div>
@@ -93,7 +96,7 @@
       <% end %>
     <% end %>
     <ul class="comments-lists">
-      <% @comments.each do |comment| %>
+      <% @comments.reverse_each do |comment| %>
         <li class="comments-list">
           <a class="comment-text"><%= comment.text %></a>
           <%= link_to comment.user.nickname, "#", class: "comment-user" %>
