--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -34,11 +34,12 @@
 }
 
 .search-button {
-  width: 5vh;
+  color: white;
+  width: 8vh;
   border: 0;
   cursor: pointer;
-  background-color: #3ccace;
   padding: 8px;
+  background-color: #3ccace;
 }
 
 .search-icon {
